Andriod Basics: User Input Object-Oriented Programming: Part 2 Lesson 7-17: EditText for user inputting their name, if/else to add price of whipped cream or chocolate, makeToast to show warnings when ordered cups beyond a certain number.

--- a/android_basics_user_input/JustJava/app/src/main/res/layout/activity_main.xml
+++ b/android_basics_user_input/JustJava/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:hint="Name"
-            android:inputType="text" />
+            android:inputType="textCapWords" />
 
         <TextView
             android:layout_width="wrap_content"
